# paint

./: CMakeLists.txt  README.md
include/: circulo.hpp  colorpicker.hpp  forma.hpp  plano.hpp  poligono.hpp  retangulo.hpp  shader.hpp  triangulo.hpp
shader/: simples.frag  simples.vert  ui.frag  ui.vert
src/: circulo.cpp  colorpicker.cpp  forma.cpp  main.cpp  plano.cpp  poligono.cpp  retangulo.cpp  triangulo.cpp
